# CNE

./: .gitignore  README.md  demo.py  main.py  ne_algorithm.py  pyproject.toml  requirements.txt  visualize.py
dataset/: 1.geojson  2.geojson  3.geojson  4.geojson  5.geojson  chengdu-1.geojson  export.geojson  foshan.geojson  left_up.geojson  nanjing.geojson  right.geojson  tianjin.geojson
dataset/processed/: edges.csv  nodes.csv
scripts/: compare_k.py  demo_external_csv.py  demo_external_csv_kmedoids.py  demo_external_csv_metis.py  demo_external_csv_ne.py  demo_grid.py  demo_random.py  preprocess_geojson.py  run_cne.py  run_kmedoids.py  run_metis.py  run_ne.py
src/cne/: __init__.py
src/cne/algorithms/: __init__.py  cne.py  kmedoids.py  metis_edge_node.py  ne.py  neighbor_expansion.py
src/cne/analysis/: __init__.py  stats.py
src/cne/graph/: __init__.py  generators.py
src/cne/utils/: __init__.py  edge.py
src/cne/viz/: __init__.py  partition_plot.py
tests/: test_generators.py  test_partition.py  test_stats.py
